# DGSEM2D

./: CMakeLists.txt
examples/: CMakeLists.txt  example_LinAdv.c
include/DGSEM2D/: LSERK.h  basis.h  br1.h  calcTimestep.h  dg.h  equationFlux.h  equationVars.h  eulerLaxFriedrichs.h  hdf5IO.h  interpolation.h  mesh.h  mpiCommunication.h  output.h  readInput.h  riemannSolver.h
src/: CMakeLists.txt
src/dg/: dg.c
src/dg/br1/: br1.c
src/equation/: calcTimestep.c  equationFlux.c  equationVars.c
src/hdf5IO/: hdf5IO.c
src/input/: readInput.c
src/interpolation/: basis.c  interpolation.c
src/mesh/: mesh.c
src/misc/: output.c
src/mpi/: mpiCommunication.c
src/riemann/: eulerLaxFriedrichs.c  riemannSolver.c
src/timedisc/: LSERK.c
tests/: CMakeLists.txt  test_legendreNodesAndWeights.c
