CMAKE_MINIMUM_REQUIRED (VERSION 3.15)
PROJECT (DGSEM2D VERSION 0.1 DESCRIPTION "Two-dimensional DG-SEM-Solver")

ENABLE_TESTING ()

FIND_PACKAGE (MPI REQUIRED)
FIND_PACKAGE (HDF5)

INCLUDE_DIRECTORIES (include)
INCLUDE_DIRECTORIES (${MPI_INCLUDE_PATH})

ADD_SUBDIRECTORY (src)
ADD_SUBDIRECTORY (tests)
ADD_SUBDIRECTORY (examples)
